<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:id="@+id/reco_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/recommendation_image"
        android:paddingEnd="@dimen/small_pad"
        android:paddingStart="@dimen/small_pad"
        android:scaleType="fitCenter" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_margin="1dp"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingBottom="@dimen/small_pad"
        android:paddingEnd="@dimen/small_pad"
        android:paddingStart="@dimen/small_pad"
        android:paddingTop="@dimen/small_pad">

        <TextView
            android:id="@+id/reco_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_pad"
            android:minHeight="12dp"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_pad"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/rating_star_1"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/rating_star_1"
                android:src="@drawable/star_outline" />

            <ImageView
                android:id="@+id/rating_star_2"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/rating_star_2"
                android:src="@drawable/star_outline" />

            <ImageView
                android:id="@+id/rating_star_3"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/rating_star_3"
                android:src="@drawable/star_outline" />

            <ImageView
                android:id="@+id/rating_star_4"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/rating_star_4"
                android:src="@drawable/star_outline" />

            <ImageView
                android:id="@+id/rating_star_5"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/rating_star_5"
                android:src="@drawable/star_outline" />

            <TextView
                android:id="@+id/reviews_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/small_pad"
                android:gravity="center_vertical"
                android:textColor="@color/charcoal"
                android:textSize="12sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/cuisine_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="12dp"
            android:textColor="@color/black"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/icon_size"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/price_range"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/phone"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:contentDescription="@string/open_number_on_phone"
            android:paddingBottom="@dimen/small_pad"
            android:paddingTop="@dimen/small_pad"
            android:src="@drawable/ic_phone" />

        <ImageView
            android:id="@+id/link"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:contentDescription="@string/opens_link"
            android:paddingBottom="@dimen/small_pad"
            android:paddingTop="@dimen/small_pad"
            android:src="@drawable/ic_link_variant" />

        <ImageView
            android:id="@+id/directions"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:contentDescription="@string/get_directions"
            android:paddingBottom="@dimen/small_pad"
            android:paddingTop="@dimen/small_pad"
            android:src="@drawable/ic_directions" />

    </LinearLayout>
</merge>