<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget_list_item"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    android:layout_marginBottom="@dimen/medium_pad"
    android:padding="@dimen/small_pad"
    android:baselineAligned="false"
    android:descendantFocusability="blocksDescendants"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/reco_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/x_small_pad"
            android:layout_weight="1"
            android:minHeight="12dp"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/going_here"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="@dimen/x_small_pad"
            android:layout_marginTop="@dimen/x_small_pad"
            android:contentDescription="@string/choose"
            android:src="@drawable/ic_satisfied" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rating_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/x_small_pad"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/rating_star_1"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/rating_star_1"
            android:src="@drawable/star_outline" />

        <ImageView
            android:id="@+id/rating_star_2"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/rating_star_2"
            android:src="@drawable/star_outline" />

        <ImageView
            android:id="@+id/rating_star_3"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/rating_star_3"
            android:src="@drawable/star_outline" />

        <ImageView
            android:id="@+id/rating_star_4"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/rating_star_4"
            android:src="@drawable/star_outline" />

        <ImageView
            android:id="@+id/rating_star_5"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/rating_star_5"
            android:src="@drawable/star_outline" />

        <TextView
            android:id="@+id/reviews_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/small_pad"
            android:gravity="center_vertical"
            android:textColor="@color/charcoal"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/cuisine_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/x_small_pad"
        android:ellipsize="end"
        android:gravity="start"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/x_small_pad"
        android:ellipsize="end"
        android:minHeight="12dp"
        android:textColor="@color/black"
        android:textSize="12sp" />
</LinearLayout>