<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.letmeeat.letmeeat.PreferencesActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/min_rating_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingEnd="@dimen/medium_pad"
            android:paddingStart="@dimen/medium_pad">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:labelFor="@+id/pref_minimum_ratings"
                android:text="@string/minimum_ratings" />

            <EditText
                android:id="@+id/pref_minimum_ratings"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:inputType="numberDecimal"
                android:text="@string/default_minimum_ratings" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/cuisine_section"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingEnd="@dimen/medium_pad"
            android:paddingStart="@dimen/medium_pad">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@+id/pref_cuisine_lookup"
                android:text="@string/lookup_cuisine" />

            <AutoCompleteTextView
                android:id="@+id/pref_cuisine_lookup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1" />

            <LinearLayout
                android:id="@+id/selected_cuisines"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/pref_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/save_preferences"
            android:textColor="@color/white" />
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>